--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@ function loadState() {
             state.remaining -= elapsed;
             if (state.remaining < 0) state.remaining = 0;
         }
+
+
+        
+        document.getElementById("focusInput").value = state.focusMinutes;
+        document.getElementById("breakInput").value = state.breakSeconds;
     }
 }
 
@@ -201,3 +206,4 @@ setInterval(tick, 1000);
 
 </body>
 </html>
+
