--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@ function tick() {
             updateUI();
 
             setTimeout(() => {
+                alert("enough!");
                 const ok = confirm("Time for a break!");
 
                 if (ok) {
@@ -206,4 +207,5 @@ setInterval(tick, 1000);
 
 </body>
 </html>
+
 
